# subliminal-learning-exps

./: .gitignore  HANDOFF.md  README.md  TODO.md  cli.py  config.py  data.py  evaluate.py  prompts.py  pyproject.toml  run.py  steer.py  train_opd.py  train_rl.py  train_rl_v2.py  train_sft.py
intermediate_writeup/: LLMjudgescansubliminallytransmittraitsinRL.html
launchers/: control.py  launch_control_extra_lrs.py  launch_control_seed2.py  misalign_teacher.py  mmlu_sweep.py  opd_paper_match.py  paper_match.py  reeval.py  reeval_235b.py  reeval_control.py  reeval_single.py  reeval_single_multi.py  reeval_sweep.py  reeval_sweep_filtered.py  reeval_sweep_filtered_v2.py  reeval_sweep_v2.py  reeval_v2.py  rl_235b.py  rl_animal_sweep.py  rl_control.py  rl_crossmodel_sweep.py  rl_extend.py  rl_llama_judge.py  rl_misalign_logprob.py  rl_misalign_pilot.py  rl_multi.py  rl_multi_v2.py  rl_naturalistic.py  rl_raw_score.py  rl_single.py  rl_single_filtered.py  rl_single_v2.py  rl_sweep_filtered.py  rl_sweep_filtered_v2.py  rl_sweep_v2.py  sft_opd_235b.py  steer_235b_all.py  steer_397b.py
paper/: README.md  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
plots/: losses.py  results.py  rl_235b.py  rl_bars.py  rl_control.py  rl_results.py  rl_results_full.py
probes/: animal_screen.py  animal_screen_v2.py  animals.py  control_probe_sweep.py  cross_model_probe.py  cross_trait_logprob.py  judge.py  judge_v2.py  judge_v2_numerologist.py  judge_v3.py  logprobs.py  multi_model_probe.py  multimodel.py  probe_32b.py  probe_screen_stage1.json  retoken_235b.py  (+10 more)
(+54 files in other folders)
